# upnext

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: app_logic.py  commands.rs  data_management.rs  errors.rs  main.py  main.rs  persistence.rs  schema.rs  tests.rs  utils.rs  validations.py  yaml_file_manager.py  yaml_service.py
test/: test_yaml_file_manager.py
test-resources/test_increment_episode/: after.toml  before.toml  stdout.txt
test-resources/test_increment_episode_default_value/: after.toml  before.toml  stdout.txt
test-resources/test_init/: after.toml  stdout.txt
test-resources/test_init_twice/: after.toml  stderr.txt
test-resources/test_print_series_info/: after.toml  stdout.txt
test-resources/test_remove_from_empty/: stderr.txt
test-resources/test_set_next_episode/: after.toml  stdout.txt
test/resources/: example.yaml
